--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,9 @@ application.args=com.mycompany.myapp.MyApplication
 compile.on.save=false
 do.depend=false
 do.jar=true
+file.reference.java-util-1.3.1.jar=C:\\Users\\nahaw\\OneDrive\\Bureau\\java-util-1.3.1.jar
+file.reference.javax.mail.jar=C:\\Users\\nahaw\\OneDrive\\Bureau\\javax.mail.jar
+file.reference.org.osgi.foundation-1.0.0.jar=C:\\Users\\nahaw\\OneDrive\\Bureau\\org.osgi.foundation-1.0.0.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\oussa\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
