--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -20,15 +20,21 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/PIMOBILE.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.CodeNameOneBuildClient.jar=C:\\Users\\nahaw\\OneDrive\\Bureau\\CodeNameOneBuildClient.jar
 file.reference.java-util-1.3.1.jar=C:\\Users\\Asus\\Downloads\\java-util-1.3.1.jar\\java-util-1.3.1.jar
+file.reference.JavaSE.jar-1=C:\\Users\\nahaw\\OneDrive\\Bureau\\JavaSE.jar
 file.reference.javax.mail.jar=C:\\Users\\Asus\\Desktop\\pi\\javax.mail.jar
 file.reference.native-internal_tmp=native/internal_tmp
 file.reference.CLDC11.jar=lib/CLDC11.jar
@@ -50,11 +56,15 @@ javac.classpath=\
     ${file.reference.impl-stubs}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.java-util-1.3.1.jar}:\
-    ${file.reference.org.osgi.foundation-1.0.0.jar}
+    ${file.reference.org.osgi.foundation-1.0.0.jar}:\
+    ${file.reference.JavaSE.jar-1}:\
+    ${file.reference.CodeNameOneBuildClient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -63,6 +73,8 @@ javac.test.classpath=\
     ${file.reference.JavaSE.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -90,9 +102,13 @@ run.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
